--- a/Web1_3_kadai.html
+++ b/Web1_3_kadai.html
@@ -5,6 +5,7 @@
 	<head>
 		<title>My Picture Page</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
 		<h5>My Picture</h5>
