--- a/Web1_3_kadai.html
+++ b/Web1_3_kadai.html
@@ -8,8 +8,10 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
+		<div id="title">
 		<h5>My Picture</h5>
-		<a href="https://github.com/rakugoproductions/Richard-Golden-kadai"><img src="file:///Z:/Desktop/web%20page%201/IMG_0207.JPG" width="1500" height="1600" alt="pic1"></a>
+		</div>
+		<a class="image" href="https://github.com/rakugoproductions/Richard-Golden-kadai"><img src="file:///Z:/Desktop/web%20page%201/IMG_0207.JPG" width="1500" height="1600" alt="pic1"></a>
 	</body>
 
 </html>
